@@ -1,3 +1,7 @@
+2012-12-10  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.11.0-digiumphones Released.
+
 2012-12-06  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.11.0-digiumphones-rc3 Released.
